--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ole Faithful</title>
 </head>
 <body>
-    
+    <h1>Ole Faithful</h1>
+    <h2>by Victory Ma</h2>
 </body>
 </html>
