--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,8 +8,6 @@
 <body>
     <h1>Ole Faithful</h1>
     <h2>by Victory Ma</h2>
-    <div id="hero">
-
-    </div>
+    <div id="hero"></div>
 </body>
 </html>
