--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,9 @@
 <body>
     <h1>Ole Faithful</h1>
     <h2>by Victory Ma</h2>
-    <div id="hero"></div>
+    <div id="hero">
+        <%= locals.test %>
+        <p id="name">The test worked.</p>
+    </div>
 </body>
 </html>
